make set selector work, add validator, add error output

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -8,3 +8,12 @@
     flex-direction: column;
     align-items: center;
 }
+
+.error {
+    background-color: #EEEEEE;
+    margin: 20px;
+    padding: 20px;
+    font-weight: bold;
+    font-size: 25px;
+    color: #b00;
+}
