--- a/src/assets/data-set-selector.scss
+++ b/src/assets/data-set-selector.scss
@@ -8,29 +8,29 @@
         padding: 0 15px;
         color: #fff;
     }
-}
 
-.data-set-selector-select {
-    overflow: hidden;
-    width: 350px;
-    border-radius: 9px 9px 9px 9px;
-    box-shadow: 1px 1px 11px #330033;
-    background: #58B14C url("http://i62.tinypic.com/15xvbd5.png") no-repeat scroll 319px center;
-}
+    &-select {
+        overflow: hidden;
+        width: 350px;
+        border-radius: 9px 9px 9px 9px;
+        box-shadow: 1px 1px 11px #330033;
+        background: #58B14C url("http://i62.tinypic.com/15xvbd5.png") no-repeat scroll 319px center;
 
-.data-set-selector-select select {
-    border: 0;
-    color: #EEE;
-    background: transparent;
-    font-size: 20px;
-    font-weight: bold;
-    padding: 2px 10px;
-    width: 378px;
-    *width: 350px;
-    *background: #58B14C;
-    -webkit-appearance: none;
-}
+        select {
+            border: 0;
+            color: #EEE;
+            background: transparent;
+            font-size: 20px;
+            font-weight: bold;
+            padding: 2px 10px;
+            width: 378px;
+            *width: 350px;
+            *background: #58B14C;
+            -webkit-appearance: none;
+        }
 
-.data-set-selector-select option {
-    color: black;
+        option {
+            color: black;
+        }
+    }
 }
