--- a/src/assets/memory-card.scss
+++ b/src/assets/memory-card.scss
@@ -24,7 +24,7 @@
         padding: 20px;
         position: absolute;
         border-radius: 5px;
-        background: #1C7CCC;
+        background-color: #1C7CCC;
         backface-visibility: hidden;
     }
 
