--- a/src/assets/selector.scss
+++ b/src/assets/selector.scss
@@ -1,4 +1,4 @@
-.data-set-selector {
+.selector {
     display: flex;
     align-items: center;
     font-size: 20px;
@@ -7,14 +7,14 @@
     label {
         padding: 0 15px;
         color: #fff;
+        white-space: nowrap;
     }
 
-    &-select {
+    &__select {
         overflow: hidden;
-        width: 350px;
         border-radius: 9px 9px 9px 9px;
         box-shadow: 1px 1px 11px #330033;
-        background: #58B14C url("http://i62.tinypic.com/15xvbd5.png") no-repeat scroll 319px center;
+        background: #58B14C url("/img/select.png") no-repeat scroll 95% center;
 
         select {
             border: 0;
@@ -23,7 +23,7 @@
             font-size: 20px;
             font-weight: bold;
             padding: 2px 10px;
-            width: 378px;
+            min-width: 200px;
             *width: 350px;
             *background: #58B14C;
             -webkit-appearance: none;
