--- a/src/assets/memory-game.scss
+++ b/src/assets/memory-game.scss
@@ -8,3 +8,35 @@
     flex-wrap: wrap;
     perspective: 1000px;
 }
+
+.end-status {
+    background: $light-background;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    padding: 20px;
+    margin: 20px auto;
+    flex-direction: column;
+    align-items: center;
+    font-size: 20px;
+
+    &__win {
+        color: #58B14C;
+    }
+
+    &__lose {
+        color: #bb0000;
+    }
+
+    &__score {
+        padding-top: 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        &-number {
+            font-weight: 900;
+            font-size: 50px;
+        }
+    }
+}
