--- a/src/assets/memory-card.scss
+++ b/src/assets/memory-card.scss
@@ -1,6 +1,6 @@
 .memory-card {
-    width: calc(25% - 10px);
-    height: calc(33.333% - 10px);
+    width: calc(15%);
+    height: calc(45%);
     margin: 5px;
     position: relative;
     transform: scale(1);
