--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -40,7 +40,7 @@ $light-background: #EEEEEE;
     justify-content: space-between;
     width: 100%;
     color: #fff;
-    padding: 1px;
+    padding: 1px 3px;
     margin: 2px;
     background-color: $menu-background;
 }
